--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
   <h2 class="temp">420°</h2>
   <h3 class="reading">Last reading 69 second ago</h3>
   <h4 class="footer">This information brought to you by the Fake News Media.</h4>
+  <!-- counter -->
   <a href="https://www.hitwebcounter.com" target="_blank">
   <img src="https://hitwebcounter.com/counter/counter.php?page=7683372&style=0008&nbdigits=5&type=page&initCount=0" title="Total Website Hits" Alt="Web Hits"   border="0" /></a>
+  <!-- adsense -->
+  <script data-ad-client="ca-pub-1278726843132101" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </body>
 </html>
