--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
 </head>
 
 <body>
-  <h1 class="header">Trump Temp</h1>
-  <h3 class="temp-header">Current Reading: </h3>
-  <h2 class="temp">420°</h2>
-  <h3 class="reading">Last reading 69 seconds ago</h3>
-  <h4 class="footer">This information brought to you by the Fake News Media.</h4>
-  <!-- counter -->
+  <div class="content">
+    <h1 class="header">Trump Temp</h1>
+    <h3 class="temp-header">Current Reading: </h3>
+    <h2 class="temp">420°</h2>
+    <h3 class="reading">Last reading 69 seconds ago</h3>
+    <h4 class="footer">This information brought to you by the Fake News Media.</h4>
+ <!-- counter -->
   <a href="https://www.hitwebcounter.com" target="_blank">
   <img src="https://hitwebcounter.com/counter/counter.php?page=7683372&style=0008&nbdigits=5&type=page&initCount=0" title="Total Website Hits" Alt="Web Hits"   border="0" /></a>
+  </div>
 </body>
 </html>
